# BCI_guided_service_robot

./: README.md
BCI/: p300-1.ui  p300-2.ui  p300-3.ui  p300-4.ui  p300-5.ui  p300-numbers.ui  p300-red.ui
BCI/communication/: sample_server.py  udp.py
BCI/execution/: commands.py  run.py  states.py  test.py
BCI/openvibe/: p300-add-clock-stim.xml  p300-offline.xml  p300-online.xml  p300-signalcheck.xml
BCI/openvibe/ov2mat/: README.txt  convert_ov2mat.m
BCI/processing/: process_offline.py  process_online.py
BCI/recording/: lsl_send.py  record_offline_P300.py  record_online.py
robot/src/nise_face_detection/: CMakeLists.txt  clf.sav  package.xml  package.xml~
robot/src/nise_face_detection/script/: face_recognition.py  face_recognition.py~
robot/src/nise_face_detection/src/: main.cpp  main.cpp~
robot/src/nise_hear/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
robot/src/nise_hear/script/: hear.py  hear.py~  move_service.py~
robot/src/nise_hear/src/: client.cpp~  main.cpp  main.cpp~
robot/src/nise_hear/srv/: Answer.srv  Answer.srv~  Hear.srv  Hear.srv~  MoveJoints.srv~
robot/src/nise_interface/: CMakeLists.txt~  package.xml  package.xml~
robot/src/nise_interface/script/: udp_interface.py  udp_interface.py~
robot/src/nise_interface/srv/: Interface.srv
robot/src/nise_planner/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
robot/src/nise_planner/src/: main.cpp  main.cpp~
robot/src/nise_pose/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
robot/src/nise_pose/script/: change_posture.py  change_posture.py~  change_posture_service.py~
robot/src/nise_talk/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
robot/src/nise_talk/src/: main.cpp  main.cpp~
robot/src/nise_talk/srv/: Talk.srv  Talk.srv~  Walk.srv~
robot/src/nise_walk/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
robot/src/nise_walk/src/: main.cpp~
robot/src/nise_walk/srv/: Walk.srv
